# Argus

./: .gitignore  README.md  launch.sh  mic.html  package-lock.json  package.json  pyproject.toml  setup.sh  start.sh  stop.sh
public/: index.html
scripts/: setup.sh  start.sh  tts_server.py
src/: llm_server.py  server.js
