[project]
name = "argus"
version = "0.1.0"
description = "Local MLX control panel for ASR, LLM, and TTS models"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "espeakng-loader>=0.2.4",
  "misaki>=0.9.0",
  "mlx-lm>=0.28.0",
  "mlx-audio>=0.2.10",
  "num2words>=0.5.14",
  "phonemizer-fork>=3.3.2",
  "python-multipart>=0.0.20",
  "setuptools>=70.0.0,<81.0.0",
  "spacy>=3.8.0",
  "uvicorn>=0.38.0",
  "webrtcvad>=2.0.10",
]
